Bug 72005 - Background color for legend area hides the legend
Summary: Background color for legend area hides the legend
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: All All
: highest critical
Assignee: Kohei Yoshida
URL:
Whiteboard: Confirmed:4.2.0.0.beta2:Ubuntu NoRepr...
Keywords: regression
: 72953 74546 74655 74705 74858 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-11-25 21:07 UTC by Jean-Baptiste Faure
Modified: 2014-02-18 14:14 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
example of chart with hidden legend (17.13 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-11-25 21:07 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2013-11-25 21:07:31 UTC
Created attachment 89783 [details]
example of chart with hidden legend

Steps to reproduce (or open the attached bugdoc):
1/ open a new spreadsheet
2/ create a chart
3/ set the legend
4/ fill the legend area with a color; keep the transparency to the default (no transparency)
5/ save the file

current behavior: the legend is hidden
expected behavior: the legend is visible

Open the file saved at step 5 with LibreOffice 4.1 and note that the legend is visible.
In 4.2 version, add transparency to the legend area: the legend becomes visible.

The good news is that there is no dataloss, however set the severity to major because uninformed user may believe that her data are corrupted.

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2013-11-25 21:09:27 UTC
Set keyword to regression: works as expected in version 4.1.x

Best regards. JBF
Comment 2 Jacques Guilleron 2013-11-26 18:25:21 UTC
Hello Jean-Baptiste,

I confirm : with your attachment opened in LO 4.3.0.0.alpha0+
Build ID: 4b9304ecdd067307e24e4388fe1addcab9e85bd0
TinderBox: Win-x86@42, Branch:master, Time: 2013-11-22_22:53:41
Windows 7 Home Premium,
legend area is greyed.
Legend contents are visible when I open this document on LO 4.1.3.2.
Adding tranparency makes contents become visible in LO 4.3.

I set status to NEW and Platform to All.

Jacques
Comment 3 Robinson Tryon (qubit) 2013-12-06 10:38:12 UTC
CONFIRMED 4.2.0.0.beta2 + Ubuntu 12.04.3

(In reply to comment #0)
> Steps to reproduce (or open the attached bugdoc):

opened doc

> current behavior: the legend is hidden
> expected behavior: the legend is visible
> 
> Open the file saved at step 5 with LibreOffice 4.1 and note that the legend
> is visible.

NOREPRO verified with LO 4.1.2.2

> In 4.2 version, add transparency to the legend area: the legend becomes
> visible.

Confirmed

> The good news is that there is no dataloss, however set the severity to
> major because uninformed user may believe that her data are corrupted.
> 

Sounds good to me.
Comment 4 Mihkel Tõnnov 2013-12-21 18:57:58 UTC
*** Bug 72953 has been marked as a duplicate of this bug. ***
Comment 5 Mihkel Tõnnov 2013-12-21 19:03:19 UTC
Carrying over importance as set by Joel Madero for bug 72953:
"Critical - loss of data (or at least a reading error that makes users think the data is lost), main component (chart legends are very common)
Highest - regression"
Comment 6 Kohei Yoshida 2014-01-10 15:37:37 UTC
I'm looking into this right now.
Comment 7 Commit Notification 2014-01-10 16:42:21 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=10840ad753b60886ea5175060cb0ec2a77e1579a

fdo#72005: Insert the border rectangle to the bottom of the stack.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-01-10 17:03:31 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1846cd8d4530d620b996f27a0ea7ab0c91639b5

fdo#72005: Add @since tag to the API documentation.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-01-10 17:06:52 UTC
Request for 4.2 backport is underway: https://gerrit.libreoffice.org/7379
Comment 10 Commit Notification 2014-01-10 18:57:49 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3a9aad596ac874e086acc897edcf8fe0212d65a8&h=libreoffice-4-2

fdo#72005: Insert the border rectangle to the bottom of the stack.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Kohei Yoshida 2014-01-10 19:25:02 UTC
Now fixed.
Comment 12 Jean-Baptiste Faure 2014-01-10 20:48:40 UTC
Thank you very much Kohei for this fix.
Verified in version 4.2.1.0+

Best regards. JBF
Comment 13 Kohei Yoshida 2014-02-07 05:28:40 UTC
*** Bug 74546 has been marked as a duplicate of this bug. ***
Comment 14 Jacques Guilleron 2014-02-08 10:29:20 UTC
*** Bug 74705 has been marked as a duplicate of this bug. ***
Comment 15 Jacques Guilleron 2014-02-08 10:47:47 UTC
*** Bug 74655 has been marked as a duplicate of this bug. ***
Comment 16 Kohei Yoshida 2014-02-12 02:16:13 UTC
*** Bug 74858 has been marked as a duplicate of this bug. ***
Comment 17 tim 2014-02-18 14:14:39 UTC
Thanks for the fix - seen in 4.2.1.1 ubuntu 13.10.