offapi/UnoApi_offapi.mk
@@ -2343,6 +2343,7 @@ $(eval $(call gb_UnoApi_add_idlfiles,offapi,com/sun/star/drawing,\
 	XShapeGrouper \
 	XShapeMirror \
 	XShapes \
+	XShapes2 \
 	XSlidePreviewCache \
 	XSlidePreviewCacheListener \
 	XSlideRenderer \
